# workflow-tutorial

./: .gitignore  README.md  magic_jupyter.ipynb  notes.txt  pyproject.toml  setup.cfg
.github/workflows/: test_cpp.yml  test_jupyter.yml  test_python.yml  trunk.yml
.trunk/: trunk.yaml
.trunk/configs/: .shellcheckrc
magic_python/: __init__.py  core.py
magic_python/tests/: test_my_magic.py  test_plot_magic.py
src/: CMakeLists.txt  main.cpp
src/tests/: test_sum.sh.in
