[metadata]
name = magic_python
version = 0.0.0
description = A test python module to introduce automated workflow
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludwig Schneider
url = https://github.com/InnocentBug/workflow-tutorial
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = numpy>=1.16